# akari_render

./: Cargo.toml
crates/lib/akari_ad/: Cargo.toml
crates/lib/akari_ad/example/: simple.rs
crates/lib/akari_ad/src/: codegen.rs  ir.rs  lib.rs  parse.rs  runtime.rs  traits.rs
crates/lib/akari_ad_derive/: Cargo.toml
crates/lib/akari_ad_derive/src/: lib.rs  test_ad.rs
crates/lib/akari_adjit/: Cargo.toml
crates/lib/akari_adjit/example/: simple.rs
crates/lib/akari_adjit/src/: codegen.rs  cpp_runtime.rs  lib.rs  runtime.rs  traits.rs  var.rs
crates/lib/akari_core/src/: lib.rs  spectrum.rs
crates/lib/akari_integrators/src/bidir/: mod.rs
